@@ -63,7 +63,10 @@ test {
   jvmArgs([
     '--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED',
     '--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
-    '--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED'])
+    '--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED',
+    '--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED',
+    '--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED',
+    '--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED'])
 
   jacoco {
     destinationFile = file("${buildDir}/jacoco/test.exec")
